Fixed whitespace issues when creating a new line and issue with wrapping long words into a new line. Removed wrapper for the compile container

--- a/tailwind.css
+++ b/tailwind.css
@@ -401,7 +401,7 @@ svg.svg-icon {
     box-shadow: none;
     position: relative;
     margin: 0 auto;
-    transform-origin: top; /* TODO: Make Zoom work with transform-origin: center*/
+    transform-origin: top;
     overflow-y: auto;
     display: flex;
     justify-content: center;
@@ -419,7 +419,7 @@ svg.svg-icon {
     box-shadow: none;
     position: relative;
     /* margin: 0 auto; */
-    transform-origin: top; /* TODO: Make Zoom work with transform-origin: center*/
+    transform-origin: top;
     overflow-y: auto;
     color: rgba(var(--text), 1);
 }
@@ -447,20 +447,19 @@ svg.svg-icon {
     box-sizing: border-box;
 }
 
-.notepad-wrapper-compile {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    /* white-space: pre-wrap; */
-}
-
 p {
     margin-block-start: 0;
     margin-block-end: 0;
 }
 
 .notepad-textarea-compile {
+    word-break: break-word;
     padding: 20px;
+}
+
+.notepad-textarea-compile p {
+    margin: 0;
+    padding: 0;
 }
 
 .anchor {
